# trailcast

./: .gitignore  README.md  TODO.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json  wrangler.toml
config/oauth/: client-metadata.dev.json  client-metadata.prod.json
docs/: architecture.md  product.md
functions/: _atproto.ts  _middleware.ts  _ogp.ts  _types.ts
mock/: package-lock.json  package.json
mock/src/data/: mock.ts
mock/src/layouts/: Layout.astro
mock/src/pages/: index.astro  pattern-1.astro  pattern-3.astro  pattern-4.astro  pattern-5.astro
mock/src/styles/: global.css
public/: _headers  _redirects
scripts/: og-default-build.ts  og-test.ts  prepare-client-metadata.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/auth/: login-form.tsx  login-modal.tsx
src/components/og/: og-backfill-modal.tsx
src/components/screens/: auth-callback-screen.tsx  bsky-crosspost-screen.tsx  bsky-import-screen.tsx  checkpoint-edit-screen.tsx  checkpoint-post-screen.tsx  home-screen.tsx  landing-screen.tsx  login-screen.tsx  share-screen.tsx  thread-create-screen.tsx  thread-detail-screen.tsx  thread-edit-screen.tsx  (+1 more)
src/lexicons/: net.shino3.trailcast.bookmark.json  net.shino3.trailcast.post.json  net.shino3.trailcast.thread.json
src/lib/: app-routes.ts  atp-agent.ts  bsky-crosspost.ts  bsky-helpers.ts  env.ts  exif.ts  image-process.ts  image-processing.ts  mock-data.ts  types.ts  use-navigation.ts
(+18 files in other folders)
