[package]
name = "trailcast"
version = "0.1.0"
description = "旅の記録を、ダイナミックに残す"
authors = ["shino3"]
edition = "2021"

[lib]
name = "trailcast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
